--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-keychain": "^9.0.0",
     "realm": "^12.13.1",
     "uuid": "^10.0.0"
   },
